src/main/kotlin/com/example/noswimmingserver/global/error/response/ErrorProperty.kt
package com.example.noswimmingserver.global.error.response

interface ErrorProperty {
    val status: Int
    val message: String
}